🐛 fix : alignement form

--- a/styles/_header.scss
+++ b/styles/_header.scss
@@ -79,6 +79,7 @@ header {
             @media screen and (min-width: 1200px) {
                 display: flex;
                 align-self: center;
+                align-items: center;
                 justify-content: space-between;
                 max-width: 1200px;
                 margin: auto;
@@ -92,13 +93,9 @@ header {
             @media screen and (min-width: 700px) {
                 width: max-content;
                 display: flex;
-                gap: 10px;
                 margin: auto;
-
-                @media screen and (max-width: 1200px) {
-
-                    padding-top: 30px;
-                }
+                gap: 10px;
+                height: 80%;
 
                 select {
                     padding: 10px 20px 10px 20px;
@@ -117,6 +114,15 @@ header {
                     font-weight: bold;
                 }
             }
+
+            @media screen and (max-width: 1200px) {
+                padding-top: 30px;
+            }
+
+            @media screen and (min-width: 1200px) {
+                margin: 0;
+            }
+
         }
 
         ul {
